--- a/FinalReport.Rnw
+++ b/FinalReport.Rnw
@@ -27,12 +27,12 @@ library(ggplot2)
 library(maps)
 library(ggmap)
 library(plyr)
-library('raster')
+library(raster)
 library(maptools)
-library('XML')
+library(XML)
 @
 
-\title{STAT 585X - Final Project - Report \\ Changes in cultivated cropland land in Iowa}
+\title{STAT 585X - Final Project - Report \\ Changes in cultivated cropland in CEAP}
 
 \author{Andreea Erciulescu}
 \maketitle
@@ -42,7 +42,7 @@ library('XML')
 
 \subsection{Question of interest}
 
-Do land characteristics changes over time match the Conservation Effects Assessement Project (CEAP) survey design and data collection?
+Do changes in land characteristics over time match the Conservation Effects Assessement Project (CEAP) survey design and data collection?
 
 \subsection{Motivation}
 
@@ -58,7 +58,9 @@ The CEAP sample is a subset of the NRI points classified as cultivated cropland.
 
 CEAP is run at both national and regional levels. The Des Moines River Watershed (HUC 0710) is the region of interest in this project, that is subdivided into nine 8-digit HUCs.\\
 
-For CSSM analysis, data from the Soil Survey is considered, collected over the 2003 to 2006 time period. Hence, the survey frame, consisting of NRI cultivated cropland points, is set in 2003. The information for these eligible points is collected in the following years, 2004-2007.
+For CSSM analysis, data from the Soil Survey is considered, collected over the 2003 to 2006 time period. Hence, the survey frame, consisting of NRI cultivated cropland points, is set in 2003. The information for these eligible points is collected in the following years, 2004-2007. Changes in land characteristics for the sample points may result in frame coverage problems that should not be ignored in the analysis. \\
+
+In this project we are using publicly available land data to investigate changes in land characteristics over time for a region of interest in CEAP.
 
 \subsection{Data}
 
@@ -73,14 +75,14 @@ The CDL data is available at \href {CDL}{http://nassgeodata.gmu.edu/CropScape/} 
 
 \item Census Topologically Integrated Geographic Encoding and Referencing database (Tigerweb) \\
 
-The Census Tigerweb data is available at \href{Census}{http://tigerweb.geo.census.gov/tigerwebmain} for both national and regional leveles. Also, data for the hydrologic levels is available at 
+The Census Tigerweb data is available at \href{Census}{http://tigerweb.geo.census.gov/tigerwebmain} for both national and regional levels. Also, data for the hydrologic levels is available at 
 
 \href{HydroCensus}{http://tigerweb.geo.census.gov/tigerwebmain/Files/tigerweb_tab10_hydro_poly_ia.html}. We are interested in the state of Iowa data, as well as the Des Moines River data. In particular, we are interested in the points coordinates. 
 
 
 \item Public Land Survey System (PLSS)\\
 
-The PLSS data can be found on \href{PLSS}{http://http://www.geocommunicator.gov/GeoComm/lsis_home/home/index.htm} in the form of shapefiles. Information is available at both state and county levels. 
+The PLSS data can be found on \href{PLSS}{http://www.geocommunicator.gov/GeoComm/lsis_home/home/index.htm} in the form of shapefiles. Information is available at both state and county levels. 
 
 \item   GIS data on hydrologic basins\\
 
@@ -92,7 +94,7 @@ The AtlasHCB data is available at \href{AtlasHCB}{http://publications.newberry.o
 
 \section{Data Collection and Processing Steps}
 
-We explored all these different data sources using different R tools. These data differ in format, in dimension and , most importantly, in the enclosed information. We are interested in a very specific region in the state of Iowa so it is very important to select the sources that provide us with most useful information. \\
+We explored all these different data sources using different R tools. These data differ in format, in dimension and, most importantly, in the enclosed information. We are interested in a very specific region in the state of Iowa so it is very important to select the sources that provide us with most useful information. \\
 
 Except for the CENSUS Tigerweb data and the CDL codes and classification data, all other files need to be downloaded and stored in the working folder. If you are not able to download it from the web (steps are presented below), please contact us and we will provide you the data. 
 
@@ -113,8 +115,6 @@ At the end of the downloading process, we have five .tif files, one for each yea
 An useful R package to read and manipulate the CDL data is the \textit{Raster} package, implemented using S4 methods. This package allows us to read the raster values from the files and to convert the cell numbers to coordinates and back. \\
 
 <<cdl,cache=FALSE, message=FALSE,warning=FALSE>>=
-#first step is to set the working directory to the folder where the data is saved
-setwd("U:/classes/585X")
 
 ##read the data
 cdl.ia03 <- raster("data/cdl/CDL_2003_19.tif")
@@ -143,7 +143,6 @@ On the other hand, PLSS data have large dimensions and storage space has been a 
 
 
 <<GIS,eval = FALSE, message=FALSE,warning=FALSE>>=
-setwd("U:/classes/585X")
 
 xx <-  readShapeSpatial("data/igsb/basin.shp")
 xxx <- thinnedSpatialPoly(as(xx,"SpatialPolygons"),
@@ -312,7 +311,6 @@ table(cdl.pts)/length(cdl.pts[-which(is.na(cdl.pts))])*100
 We pull both the Iowa data and the Des Moines River data from the web using the \textit{XML} library in R. The Iowa data is used to extract the point coordinates and construct a map. First, we pull the point coordinates for the available points and save them in a dataframe containing the numeric values. We use the \textit{ggplot2} library in R to construct a plot of the data and the \textit{maps} and \textit{ggmap} libraries to construct a map of the data. These visualisations serve as both a nice representation of the data and as a verification that we are working with the desired region. We constructed maps using both \textit{qplot} and \textit{qmap} functions but we only present the google maps.\\ 
 
 <<census,cache=TRUE, warning=FALSE, message=FALSE>>=
-setwd("U:/classes/585X")
 
 ###pull the iowa census data from the web
 src ="http://tigerweb.geo.census.gov/tigerwebmain/Files/tigerweb_acs13_tract_ia.html"
@@ -342,7 +340,6 @@ qmap(location = 'iowa', zoom=7, maptype = 'hybrid') +
 The data for the Des Moines River is extracted from the full dataframe on the hydrologic levels in Iowa. Again, we construct a dataframe with numeric values for the point coordinates and we overlay this data on the previous map. \\
 
 <<censusdsm,cache=TRUE, warning=FALSE, message=FALSE>>=
-setwd("U:/classes/585X")
 
 ###pull the hydrologic iowa data from the web
 
@@ -621,7 +618,7 @@ There seem to be missing records in 2004 and 2006 due to clouds and to undefined
 
 We notice significant changes in some important crops over the years, for example corn and soybeans. The corn proportion of land is low in 2004 and 2005, while the soybean proportion of land is low in all but 2003, even missing in 2007. This trend would affect the analysis because the frame was designed in 2003 and we see greater changes in the follwoing years, when the data was collected. Some points seem to have changes classes.\\
 
-The next step is to utilize the tools constructed in this project to analyze changes in the real CEAP data. We would also like to investigate the CDL data as opossible source of covariates in CEAP small area models.
+We have successfully worked with big data in different formats (.tif, web, coordinates in different measurement system) and developed tools to manipulate and extract useful infromation out of it. The next step is to utilize the tools constructed in this project to analyze changes in the real CEAP data. We would also like to investigate the CDL data as possible source of covariates in CEAP small area models. Another possible extension of this work with be the implementation of a shiny app. This would allow the users to better interact with CEAP data from yearly surveys, from different regions across United States.
 
 
 \section{References:}
